Complete swagger annotations
