# hotel-service/api/swagger.yaml
@@ -1,10 +1,27 @@
 definitions:
+  model.Hotel:
+    properties:
+      description:
+        type: string
+      hotelier:
+        $ref: '#/definitions/model.Hotelier'
+      hotelierID:
+        type: string
+      id:
+        type: string
+      location:
+        type: string
+      name:
+        type: string
+    type: object
   model.HotelData:
     properties:
       description:
         type: string
       hotelier:
         $ref: '#/definitions/model.Hotelier'
+      hotelierID:
+        type: string
       location:
         type: string
       name:
@@ -20,20 +37,58 @@ definitions:
 info:
   contact: {}
 paths:
-  /hotels:
+  /hotel:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Hotel'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get a list of all hotels
     post:
       consumes:
       - application/json
       parameters:
-      - in: path
-        name: description
-        type: string
-      - in: path
-        name: location
-        type: string
-      - in: path
-        name: name
-        type: string
+      - description: Hotel data
+        in: body
+        name: hotel
+        required: true
+        schema:
+          $ref: '#/definitions/model.HotelData'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Create a new hotel
+  /hotel/{id}:
+    delete:
+      consumes:
+      - application/json
       produces:
       - application/json
       responses:
@@ -48,4 +103,47 @@ paths:
           schema:
             type: string
       summary: Delete a hotel
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Hotel'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get a hotel by ID
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Hotel data
+        in: body
+        name: hotel
+        required: true
+        schema:
+          $ref: '#/definitions/model.HotelData'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Update a hotel
 swagger: "2.0"
